revert to "github pages deploy"

--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "homepage": "https://Ismael-Deka.github.io/",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
-    "build": "PUBLIC_URL=./ react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,7 +46,6 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "gh-pages": "^5.0.0"
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
