--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "homepage": "https://Ismael-Deka.github.io/ismael-PF",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=./public react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
